<resources>
    <string name="app_name">MyFlexibleFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello ini Home Fragment</string>
    <string name="to_category">Ke Fragment Category</string>
    <string name="this_profile">Ini Activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="question_coach">Siapa pelatih tersukses di dunia?</string>
    <string name="ole_gunnar_soksjaer">Ole Gunnar Soksjaer</string>
    <string name="ronald_koeman">Ronald Koeman</string>
    <string name="ralf_ragnick">Ralf Ragnick</string>
    <string name="quique_setien">Quique Setien</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
</resources>